2002-01-12  Dave Peticolas  <dave@krondo.com>

	* src/engine/gw-glib-spec.scm: remove

	* src/engine/gw-engine-spec.scm: g-wrap split & trans lookup

	* src/engine/gnc-engine-util.h: add more timing utils

	* src/engine/gnc-engine-util.c: add more timing utils

	* src/engine/Transaction.h: g-wrap split & trans lookup

	* src/engine/Transaction.c: g-wrap split & trans lookup

	* src/engine/Makefile.am: Take out glib wrapping cruft

2002-01-09  Rob Browning  <rlb@defaultvalue.org>

	* lib/srfi/Makefile.am: handle conditional per-SRFI install.

	* src/engine/engine-helpers.c: removed various glist processing
	helpers -- now handled by g-wrap.  However g-wrap doesn't ATM
	publish the glist->list and list->glist functions on the scheme
	side.  If we need that, it can be added.

	* configure.in: switch to check and only install the srfis we
	need. do the same for guile-www.
	(AM_PATH_GWRAP): require g-wrap 1.3.2. 
	(CFLAGS): add -Wno-uninitialized and -Wno-unused to accomodate
	g-wrap issues.
	(GNUCASH_ENGINE_LIBS): remove libgw-glib -- now provided by g-wrap.

	* src/scm/main.scm (gnc:safe-strcmp): new public function -- we
	were using a g-wrapped version, but that seemed more expensive
	than necessary.

	* src/gnome-utils/dialog-options.c
	(gnc_option_set_ui_value_internal): switch to using
	gnc_scm_list_to_glist directly.
	(gnc_option_get_ui_value_internal): switch to using
	gnc_scm_glist_to_list directly.

	* src/report/standard-reports/transaction.scm (trep-renderer):
	quit using gnc:glist->list and gnc:list->glist -- new g-wrap
	eliminates need.

	* src/report/standard-reports/register.scm (reg-renderer): quit
	using gnc:glist->list -- new g-wrap eliminates need.

	* src/report/standard-reports/average-balance.scm (renderer): quit
	using gnc:glist->list and gnc:list->glist -- new g-wrap eliminates
	need.

	* src/report/standard-reports/aging.scm (aging-renderer): quit
	using gnc:glist->list -- new g-wrap eliminates need.
