@@ -10,12 +10,16 @@ GUILE_LOAD_PATH="${GUILE_LOAD_PATH}:@-G_WRAP_MODULE_DIR-@"
 GUILE_LOAD_PATH="${GUILE_LOAD_PATH}:@-GNC_GUILE_MODULE_DIR-@"
 GUILE_LOAD_PATH="${GUILE_LOAD_PATH}:@-GNC_SCM_INSTALL_DIR-@"
 
-LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${GNC_MODULE_PATH}"
-LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:@-GNC_LIB_INSTALLDIR-@"
-LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:@-GNC_MODULE_DIR-@"
+EXTRA_LIBS="${GNC_MODULE_PATH}"
+EXTRA_LIBS="${EXTRA_LIBS}:@-GNC_LIB_INSTALLDIR-@"
+EXTRA_LIBS="${EXTRA_LIBS}:@-GNC_MODULE_DIR-@"
+
+LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${EXTRA_LIBS}"
+LTDL_LIBRARY_PATH="${LTDL_LIBRARY_PATH}:${EXTRA_LIBS}"
 
 export GNC_MODULE_PATH
 export GUILE_LOAD_PATH
 export LD_LIBRARY_PATH
+export LTDL_LIBRARY_PATH
 
 exec "$@"
